...
    ).showSnackBar(SnackBar(content: Text(message)));
  }

  @override
  Widget build(BuildContext context) {
    return AppScaffold(
      title: 'Subscription',
      showAd: false,
      body: Consumer2<SubscriptionProvider, IapService>(
        builder: (context, provider, iapService, child) {
          if (iapService.eventId != _handledIapEventId) {
            final eventIdToHandle = iapService.eventId;
            final errorToShow = iapService.lastError;
...
